Layout issues fixed and other minor changes to email regex (using scan instead of =~ to refactor and make more clean)

--- a/ffgsite/public/stylesheets/style.css
+++ b/ffgsite/public/stylesheets/style.css
@@ -84,7 +84,17 @@ font-style:italic;
 table, th, td {
     border: 0px ;
 }
+
 td {
 text-align: left;
 padding: 10px;
+}
+
+*.lbl {
+  font-weight: bold;
+}
+
+*.user_content {
+  font-style: italic;
+  color: green;
 }
